client/.deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: k3d-mycluster-registry:55488/auth-example-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
